@@ -427,8 +427,6 @@ void DXClusterWidget::slotClusterDataArrived()
                     dxClusterString = dxClusterString + "  ### Needed for DXMarathon - " + QString::number(QDateTime::currentDateTime().date().year()) + " ###";
                 }
             }
-
-
         }
         else
         {
@@ -480,6 +478,12 @@ void DXClusterWidget::slotClusterDataArrived()
         }
 */
         dxClusterListWidget->insertItem(0,item);
+        if (util->isValidCall (dxCall))
+        {
+            //void dxspotArrived(const QString &_call, const QString &_text, const double _freq);
+            QString locator = world->getLocator (dxEntity);
+            emit dxspotArrived(dxCall, locator, dxFrequency.toDouble());
+        }
 
         //dxClusterListWidget->insertItem(0,item);
         //QListWidgetItem *item = new QListWidgetItem();
