@@ -1,7 +1,8 @@
 Feb 2022 - 2.1
 - Improvement: Changed the map provider to ESRI to be able to get Map legends in English.
 - Improvement: Added two buttons to the map to change the zoom level.
-- Improvement: Added the possibility to add markers to the map.
+- New feature: DX Spots coming from DXCluster can be sent to the map.
+- Bugfix: Longitude was not properly calculated from a callsign.
 
 Feb 2022 - 2.0
 - Stop the Ukranian war release.
